--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,28 +1,33 @@
 <!--index.wxml-->
 <import src="/pages/common/searchTip.wxml"/>
-<template is="searchTip"  data="{{searchTipData}}"/>
+<template is="searchTip" data="{{searchTipData}}"/>
 <view class="index-container">
   <view class="hago-search-head">
     <view class="hago-search-head-seach-par">
       <input class="hago-search-head-seach-ipt" type="text" placeholder="搜索" bindinput="searchIptChange" value="{{searchIptVal}}"/>
-      <button class="{{searchTipData.searchBtnClass}}" type="button" catchtap="{{searchBtnLis}}">{{searchTipData.searchBtnVal}}</button>
+      <button class="{{searchTipData.searchBtnClass}}" type="button" catchtap="{{searchBtnLis}}">
+        {{searchTipData.searchBtnVal}}
+      </button>
     </view>
   </view>
   <view class="hago-search-body" hidden="{{!searchTipData.hidden}}">
     <ul class="hago-search-head-seach-inf">
-      <li class="hago-search-head-seach-inf-item {{priceIconSort!=''?'hago-search-head-seach-inf-item-choose':''}}" data-type="price" data-sort="{{priceIconSort}}" catchtap="sort">价格
+      <li class="hago-search-head-seach-inf-item {{priceIconSort!=''?'hago-search-head-seach-inf-item-choose':''}}" data-type="price" data-sort="{{priceIconSort}}" catchtap="sort">
+        价格
         <label class="hago-search-head-seach-inf-icon-par">
           <i class="iconfont icon-paixu-shengxu hago-search-head-seach-inf-icon {{priceIconSort=='up'?'hago-search-head-seach-inf-icon-choose':''}}"></i>
           <i class="iconfont icon-paixu-jiangxu hago-search-head-seach-inf-icon {{priceIconSort=='down'?'hago-search-head-seach-inf-icon-choose':''}}"></i>
         </label>
       </li>
-      <li class="hago-search-head-seach-inf-item {{commentNumIconSort!=''?'hago-search-head-seach-inf-item-choose':''}}" data-type="commentNum" data-sort="{{commentNumIconSort}}" catchtap="sort">评价
+      <li class="hago-search-head-seach-inf-item {{commentNumIconSort!=''?'hago-search-head-seach-inf-item-choose':''}}" data-type="commentNum" data-sort="{{commentNumIconSort}}" catchtap="sort">
+        评价
         <label class="hago-search-head-seach-inf-icon-par">
           <i class="iconfont icon-paixu-shengxu hago-search-head-seach-inf-icon {{commentNumIconSort=='up'?'hago-search-head-seach-inf-icon-choose':''}}"></i>
           <i class="iconfont icon-paixu-jiangxu hago-search-head-seach-inf-icon {{commentNumIconSort=='down'?'hago-search-head-seach-inf-icon-choose':''}}"></i>
         </label>
       </li>
-      <view class="js-search-head-showTerms-btn hago-search-head-seach-inf-item" bindtap="showSearchTerms">筛选<i class="iconfont icon-shaixuan"></i></view>
+      <view class="js-search-head-showTerms-btn hago-search-head-seach-inf-item" bindtap="showSearchTerms">
+        筛选<i class="iconfont icon-shaixuan"></i></view>
     </ul>
     <view class="hago-search-cnt">
       <ul class="hago-search-list">
@@ -61,67 +66,71 @@
           </view>
         </li>-->
       </ul>
-    </view><view class="js-hago-search-terms-layer hago-search-terms-layer {{searchTermsLayerAnimationCls}}" hidden="{{showSearchTerms}}" catchanimationend="searchTermsLayerAnimationEnd">
-    <view class="hago-search-terms-layer-mask" catchtap="hideSearchTerms"></view>
-    <view class="hago-search-terms-layer-cnt">
-      <view class="hago-search-terms-group">
-        <view class="hago-search-terms-title">
-          条件查找
+    </view>
+    <view class="js-hago-search-terms-layer hago-search-terms-layer {{searchTermsLayerAnimationCls}}" hidden="{{showSearchTerms}}" catchanimationend="searchTermsLayerAnimationEnd">
+      <view class="hago-search-terms-layer-mask" catchtap="hideSearchTerms"></view>
+      <view class="hago-search-terms-layer-cnt">
+        <view class="hago-search-terms-group">
+          <view class="hago-search-terms-title">
+            条件查找
+          </view>
+          <ul class="hago-search-terms-items-par">
+            <view wx:for="{{searchTermsGoods}}" class="hago-search-terms-item w200 mr16 mb14 {{item.check?'hago-search-terms-item-choosed':''}}" data-check="{{item.check}}"
+                  catchtap="termsCheck" data-index="{{index}}" hidden="{{item.hidden}}" data-id="{{item.id}}">
+              {{item.name}}
+            </view>
+          </ul>
         </view>
-        <ul class="hago-search-terms-items-par">
-          <view wx:for="{{searchTermsGoods}}" class="hago-search-terms-item w200 mr16 mb14 {{item.check?'hago-search-terms-item-choosed':''}}" data-check="{{item.check}}"
-                catchtap="termsCheck" data-index="{{index}}" hidden="{{item.hidden}}" data-id="{{item.id}}">{{item.name}}</view>
-        </ul>
-      </view>
-      <view class="hago-search-terms-group" wx:for="{{searchTermsGoodsDetailCheck}}">
-        <view class="hago-search-terms-title">
-          {{item.name}}
+        <view class="hago-search-terms-group" wx:for="{{searchTermsGoodsDetailCheck}}">
+          <view class="hago-search-terms-title">
+            {{item.name}}
+          </view>
+          <ul class="hago-search-terms-items-par">
+            <view wx:for="{{item.spec}}" wx:for-item="specItem" wx:for-index="specindex" class="hago-search-terms-item w200 mr16 mb14 {{specItem.check?'hago-search-terms-item-choosed':''}}" data-check="{{specItem.check}}"
+                  catchtap="termsSpecCheck" data-index="{{index}}" data-specindex="{{specindex}}">{{specItem.name}}
+            </view>
+          </ul>
         </view>
-        <ul class="hago-search-terms-items-par">
-          <view wx:for="{{item.spec}}" wx:for-item="specItem" class="hago-search-terms-item w200 mr16 mb14 {{specItem.check?'hago-search-terms-item-choosed':''}}" data-check="{{specItem.check}}"
-                catchtap="" data-index="{{index}}">{{specItem.name}}</view>
-        </ul>
-      </view>
-      <view class="hago-search-terms-group">
-        <view class="hago-search-terms-title">
-          价格区间
+        <view class="hago-search-terms-group">
+          <view class="hago-search-terms-title">
+            价格区间
+          </view>
+          <view class="hago-search-terms-priceRange mb14">
+            <input class="hago-search-terms-priceRange-ipt" placeholder="最低价" placeholder-class="hago-search-terms-priceRange-ipt-ph" type="text"/>
+            <view class="hago-search-terms-priceRange-hline"></view>
+            <input class="hago-search-terms-priceRange-ipt" placeholder="最高价" placeholder-class="hago-search-terms-priceRange-ipt-ph" type="text"/>
+          </view>
+          <ul class="hago-search-terms-items-par">
+            <li class="hago-search-terms-item w200 mr16 mb14">一级能效</li>
+            <li class="hago-search-terms-item w200 mr16 mb14">智能家电</li>
+            <li class="hago-search-terms-item w200 mr16 mb14">新品</li>
+          </ul>
+          <!--<ul class="hago-search-terms-priceRange-personchoose">
+            <li class="hago-search-terms-priceRange-personchoose-item mr14">
+              <p class="hago-search-terms-priceRange-personchoose-item-p1">769-1319</p>
+              <p class="hago-search-terms-priceRange-personchoose-item-p2">33%的选择</p>
+            </li>
+            <li class="hago-search-terms-priceRange-personchoose-item mr14">
+              <p class="hago-search-terms-priceRange-personchoose-item-p1">1319-3399</p>
+              <p class="hago-search-terms-priceRange-personchoose-item-p2">66%的选择</p>
+            </li>
+            <li class="hago-search-terms-priceRange-personchoose-item mr14">
+              <p class="hago-search-terms-priceRange-personchoose-item-p1">3399-6699</p>
+              <p class="hago-search-terms-priceRange-personchoose-item-p2">1%的选择</p>
+            </li>
+          </ul>-->
         </view>
-        <view class="hago-search-terms-priceRange mb14">
-          <input class="hago-search-terms-priceRange-ipt" placeholder="最低价" placeholder-class="hago-search-terms-priceRange-ipt-ph" type="text"/>
-          <view class="hago-search-terms-priceRange-hline"></view>
-          <input class="hago-search-terms-priceRange-ipt" placeholder="最高价" placeholder-class="hago-search-terms-priceRange-ipt-ph" type="text"/>
-        </view>
-        <ul class="hago-search-terms-items-par">
-          <li class="hago-search-terms-item w200 mr16 mb14">一级能效</li>
-          <li class="hago-search-terms-item w200 mr16 mb14">智能家电</li>
-          <li class="hago-search-terms-item w200 mr16 mb14">新品</li>
-        </ul>
-        <!--<ul class="hago-search-terms-priceRange-personchoose">
-          <li class="hago-search-terms-priceRange-personchoose-item mr14">
-            <p class="hago-search-terms-priceRange-personchoose-item-p1">769-1319</p>
-            <p class="hago-search-terms-priceRange-personchoose-item-p2">33%的选择</p>
-          </li>
-          <li class="hago-search-terms-priceRange-personchoose-item mr14">
-            <p class="hago-search-terms-priceRange-personchoose-item-p1">1319-3399</p>
-            <p class="hago-search-terms-priceRange-personchoose-item-p2">66%的选择</p>
-          </li>
-          <li class="hago-search-terms-priceRange-personchoose-item mr14">
-            <p class="hago-search-terms-priceRange-personchoose-item-p1">3399-6699</p>
-            <p class="hago-search-terms-priceRange-personchoose-item-p2">1%的选择</p>
-          </li>
+        <!--<ul class="hago-search-terms-items-par mt46">
+          <li class="hago-search-terms-item w140 mr18">商城在售</li>
+          <li class="hago-search-terms-item w140 mr18">商城在售</li>
+          <li class="hago-search-terms-item w140 mr18">新品推荐</li>
+          <li class="hago-search-terms-item w140 mr18">套购优惠</li>
         </ul>-->
-      </view>
-      <!--<ul class="hago-search-terms-items-par mt46">
-        <li class="hago-search-terms-item w140 mr18">商城在售</li>
-        <li class="hago-search-terms-item w140 mr18">商城在售</li>
-        <li class="hago-search-terms-item w140 mr18">新品推荐</li>
-        <li class="hago-search-terms-item w140 mr18">套购优惠</li>
-      </ul>-->
-      <view class="hago-search-terms-btm">
-        <button class="hago-search-terms-btn-reset" type="button">重置</button>
-        <button class="hago-search-terms-btn-submit" type="button">搜索</button>
+        <view class="hago-search-terms-btm">
+          <button class="hago-search-terms-btn-reset" type="button" catchtap="resetSearchTerms">重置</button>
+          <button class="hago-search-terms-btn-submit" type="button" catchtap="searchByTerms">搜索</button>
+        </view>
       </view>
     </view>
-  </view>
   </view>
 </view>
