大图和列表模式切换

--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -26,11 +26,13 @@
           <i class="iconfont icon-paixu-jiangxu hago-search-head-seach-inf-icon {{commentNumIconSort=='down'?'hago-search-head-seach-inf-icon-choose':''}}"></i>
         </label>
       </li>
+      <view class="js-search-head-showTerms-btn hago-search-head-seach-inf-item" catchtap="changeListType" data-type="{{listTypeIconCls}}" data-listtype="{{listType}}">
+        <i class="iconfont {{listTypeIconCls}} hago-search-head-seach-inf-item-icon-listType"></i></view>
       <view class="js-search-head-showTerms-btn hago-search-head-seach-inf-item" bindtap="showSearchTerms">
         筛选<i class="iconfont icon-shaixuan"></i></view>
     </ul>
     <view class="hago-search-cnt">
-      <ul class="hago-search-list">
+      <ul class="hago-search-list" wx:if="{{listType=='datu'}}">
         <li class="hago-search-list-item" wx:for="{{goods}}" wx:key="id">
           <image class="hago-search-list-item-img" src="{{item.url}}"></image>
           <view class="hago-search-list-item-inf">
@@ -59,6 +61,42 @@
                 <span class="hago-search-list-item-inf-price">2399</span>
               </view>
               <view class="hago-search-list-item-inf-btm-r">
+                <span>用户口碑 </span>
+                <span>21222</span>
+              </view>
+            </view>
+          </view>
+        </li>-->
+      </ul>
+      <ul class="hago-index-cnt-list-goods" wx:else>
+        <li class="hago-index-cnt-list-goods-item" wx:for="{{goods}}">
+          <image class="hago-index-cnt-list-goods-item-img" src="{{item.url}}"></image>
+          <view class="hago-index-cnt-list-goods-item-inf">
+            <view class="hago-index-cnt-list-goods-item-name">{{item.name}}</view>
+            <view class="hago-index-cnt-list-goods-item-spec">{{item.spec}}</view>
+            <view class="hago-index-cnt-list-goods-item-btm">
+              <view class="hago-index-cnt-list-goods-item-btm-l">
+                参考价：<span class="hago-index-cnt-list-goods-item-price">￥</span>
+                <span class="hago-index-cnt-list-goods-item-price">{{item.price}}</span>
+              </view>
+              <view class="hago-index-cnt-list-goods-item-btm-r">
+                <span>用户口碑 </span>
+                <span>{{item.commentNum}}</span>
+              </view>
+            </view>
+          </view>
+        </li>
+        <!--<li class="hago-index-cnt-list-goods-item">
+          <image class="hago-index-cnt-list-goods-item-img" src="../../assets/img/index/test-goods-item.jpg"></image>
+          <view class="hago-index-cnt-list-goods-item-inf">
+            <view class="hago-index-cnt-list-goods-item-name">223升定频风冷冰箱</view>
+            <view class="hago-index-cnt-list-goods-item-spec">BCD-223WDPZ</view>
+            <view class="hago-index-cnt-list-goods-item-btm">
+              <view class="hago-index-cnt-list-goods-item-btm-l">
+                参考价：<span class="hago-index-cnt-list-goods-item-price">￥</span>
+                <span class="hago-index-cnt-list-goods-item-price">2399</span>
+              </view>
+              <view class="hago-index-cnt-list-goods-item-btm-r">
                 <span>用户口碑 </span>
                 <span>21222</span>
               </view>
